tests/paczka1/small_fuzzy/47787828.err
Error in line 1: A482 A203 65,4
Error in line 4: A482 A207 121,15
Error in line 5: 7I8O A399 86,8
Error in line 2: A482 A207 67,1
